Ft notifications update #162171027 (#66)
* [feature 162171027] notification update

* [feature 162171027] update notifications

* [feature 162171027] update from hound comments

* [ feature 162171027 ] notifications update

* [feature 162171027] updated files from PR comments

* [feature 162171027] updated file

* [feature 162171027] updated file

* [feature 162171027] update on get user by notification status

* [feature 163172710] update on hound comment

* [feature 162171027] WIP

* [feature 162171027] followers seed file

* [feature 162171027] followers seeders

* [feature 162171027] code refactor
