# lib/FollowersModelQuery.js
@@ -1,7 +1,7 @@
 import models from '../models';
 // import profiles from '../models/profiles';
 
-const { followers, profiles } = models;
+const { followers, profiles, users } = models;
 /**
  *
  *
@@ -9,12 +9,12 @@ const { followers, profiles } = models;
  */
 class FollowersModelQuery {
   /**
-    * @param {stirng} followingId username of the person you are following
+    * @param {stirng} followedId username of the person you are following
    * @return {object} return .
    */
-  static async findFollowingByUsername(followingId) {
+  static async findFollowingByUsername(followedId) {
     try {
-      const userRecord = await followers.findOne({ where: { followingId } });
+      const userRecord = await followers.findOne({ where: { followedId } });
       if (userRecord) {
         return userRecord;
       }
@@ -25,13 +25,13 @@ class FollowersModelQuery {
   }
 
   /**
-    * @param {stirng} followingId username must be type string
+    * @param {stirng} followedId username must be type string
     * @param {stirng} followerId  user id must be type integer
    * @return {object} return an object
    */
-  static async findFollowingById(followingId, followerId) {
+  static async findFollowingById(followedId, followerId) {
     try {
-      const userRecord = await followers.findOne({ where: { followingId, followerId } });
+      const userRecord = await followers.findOne({ where: { followedId, followerId } });
       if (userRecord) {
         return userRecord;
       }
@@ -49,8 +49,7 @@ class FollowersModelQuery {
     try {
       const userRecord = await followers.findAll({
         include: [{
-          model: profiles,
-          as: 'follow'
+          model: profiles
         }],
         where: { followerId },
       });
@@ -65,17 +64,16 @@ class FollowersModelQuery {
   }
 
   /**
-    * @param {stirng} followingId  user id must be type integer
+    * @param {stirng} followedId  user id must be type integer
    * @return {object} return an object
    */
-  static async findAllFollowing(followingId) {
+  static async findAllFollowing(followedId) {
     try {
       const userRecord = await followers.findAll({
         include: [{
           model: profiles,
-          as: 'follow'
         }],
-        where: { followingId }
+        where: { followedId }
       });
       if (userRecord) {
         return userRecord;
@@ -84,6 +82,36 @@ class FollowersModelQuery {
     } catch (e) {
       // console.log(e);
       throw new Error('Something went wrong', e);
+    }
+  }
+
+  /**
+    * @param {stirng} userId  user id must be type integer
+   * @return {object} return an object
+   */
+  static async findAllFollowingbByNotifications(userId) {
+    try {
+      const userRecord = await followers.findAll({
+        attributes: ['followerId', 'followedId'],
+        where: { followedId: userId },
+        include: [{
+          model: profiles,
+          attritubutes: ['username', 'userId'],
+          required: true,
+          include: [{
+            model: users,
+            where: { notification: true },
+            required: true,
+            attritubutes: ['email', 'notification', 'id'],
+          }]
+        }],
+      });
+      if (userRecord) {
+        return userRecord;
+      }
+      return null;
+    } catch (e) {
+      throw new Error('Something went wrong', e.message);
     }
   }
 }
