# swagger.json
@@ -1018,7 +1018,7 @@
         }
       }
     },
-    "/users/{followingId}/follow": {
+    "/users/{followedId}/follow": {
       "post": {
         "tags": [
           "Users"
@@ -1041,7 +1041,7 @@
           },
           {
             "in": "path",
-            "name": "followingId",
+            "name": "followedId",
             "description": "Enter folowing ID in params",
             "required": true,
             "type": "integer",
@@ -1061,7 +1061,7 @@
         }
       }
     },
-    "/users/{followingId}/unfollow": {
+    "/users/{followedId}/unfollow": {
       "post": {
         "tags": [
           "Users"
@@ -1084,7 +1084,7 @@
           },
           {
             "in": "path",
-            "name": "followingId",
+            "name": "followedId",
             "description": "Enter following ID in params",
             "required": true,
             "type": "integer",
@@ -2967,7 +2967,7 @@
                 "type": "integer",
                 "format": "int64"
               },
-              "followingId": {
+              "followedId": {
                 "type": "integer",
                 "format": "int64"
               },
@@ -3045,7 +3045,7 @@
                 "type": "integer",
                 "format": "int64"
               },
-              "followingId": {
+              "followedId": {
                 "type": "integer",
                 "format": "int64"
               },
